--- a/templates/payment-confirmation.html
+++ b/templates/payment-confirmation.html
@@ -294,14 +294,14 @@
             </p>
             
             <div class="social-links">
-                <a href="mailto:admin@gamca.in">Email Support</a> |
+                <a href="mailto:admin@gamca-wafid.com">Email Support</a> |
                 <a href="tel:+91-XXXXXXXXXX">Phone Support</a> |
                 <a href="{{dashboardUrl}}">Dashboard</a>
             </div>
 
             <p class="contact-info">
                 This is an automated email. Please do not reply to this message.<br>
-                For support, please contact us at admin@gamca.in<br>
+                For support, please contact us at admin@gamca-wafid.com<br>
                 © 2024 GAMCA Medical Services. All rights reserved.
             </p>
         </div>
